force-app/main/default/objects/Pro_Services_Topic__c/Pro_Services_Topic__c.object-meta.xml
<CustomObject>
    <customHelp>PSTopics_CustomHelp</customHelp>
    <description>Topics available for individual Offerings conducted by the Professional Services @ ASA team.</description>
    <label>Pro Services Topic</label>
    <nameField>
        <label>Topic Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pro Services Topics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>