force-app/main/default/objects/Pro_Services_Topic__c/fields/Brand_del__c.field-meta.xml
<CustomField>
    <fullName>Brand_del__c</fullName>
    <label>Brand?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SALT</fullName>
            </value>
            <value>
                <fullName>ASA</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>