force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_ConferenceOffering__c.field-meta.xml
<CustomField>
    <fullName>PS_ConferenceOffering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the topic will be submitted to conferences for the current year.</description>
    <inlineHelpText>If this box is checked, this Topic is considered part of the standard conference offerings for all state, regional and national _ASFAA conferences.</inlineHelpText>
    <label>Conference Offering</label>
    <type>Checkbox</type>
</CustomField>