force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicAvailableDeliveryFormat__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicAvailableDeliveryFormat__c</fullName>
    <description>How this topic may be viewed/presented</description>
    <inlineHelpText>This field indicates the methods that may be used to deliver this content. Other options may be available, but may require additional development time.</inlineHelpText>
    <label>Available Delivery Formats</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Presentation (in person)</fullName>
            </value>
            <value>
                <fullName>Presentation (web-based)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>