force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicAvailablePresenters__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicAvailablePresenters__c</fullName>
    <description>Other members of the ProServices @ ASA team who are able to present this topic.</description>
    <inlineHelpText>This field indicates the ProServices @ ASA team members who may be able to presnt on this topic.</inlineHelpText>
    <label>Available Presenters</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gina Lucente-Cole</fullName>
            </value>
            <value>
                <fullName>Jacquie Carroll</fullName>
            </value>
            <value>
                <fullName>Jen Schott</fullName>
            </value>
            <value>
                <fullName>Joanne Dashiell</fullName>
            </value>
            <value>
                <fullName>Lyssa Thaden</fullName>
            </value>
            <value>
                <fullName>Sabrina Mainini</fullName>
            </value>
            <value>
                <fullName>Non-PS ASA Staff</fullName>
            </value>
            <value>
                <fullName>Fidel Calero</fullName>
            </value>
            <value>
                <fullName>Daryl Conte</fullName>
            </value>
            <value>
                <fullName>Lorinda Diehl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>