force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicCategory__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicCategory__c</fullName>
    <description>The category or categories used to group topics together.</description>
    <inlineHelpText>The Category is the general group or thematic area that this Topic falls under.</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASA Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Campus Leadership</fullName>
            </value>
            <value>
                <fullName>Financial Literacy for Campus Staff</fullName>
            </value>
            <value>
                <fullName>Financial Literacy for Students</fullName>
            </value>
            <value>
                <fullName>Regulations &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Default Prevention and Management</fullName>
            </value>
            <value>
                <fullName>SALT Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>