force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicDescription__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicDescription__c</fullName>
    <description>Describe this topic.</description>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>