force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicHowWillYouBenefit__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicHowWillYouBenefit__c</fullName>
    <description>How will the user benefit from this topic?</description>
    <label>How Will You Benefit</label>
    <type>TextArea</type>
</CustomField>