force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicLevel__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicLevel__c</fullName>
    <description>Target level for expected audience.</description>
    <label>Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>