force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicSubTitle__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicSubTitle__c</fullName>
    <description>Sub-title for the topic.</description>
    <label>Sub-Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>