force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicSynopsis_del__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicSynopsis_del__c</fullName>
    <description>Write a brief synopsis of this topic (suitable for publication in a conference program or in a flyer advertising this session).</description>
    <label>Synopsis</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>