force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicTypicalLength__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicTypicalLength__c</fullName>
    <description>The typical lenght of a presentation.</description>
    <label>Typical Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 minutes</fullName>
            </value>
            <value>
                <fullName>60 minutes</fullName>
            </value>
            <value>
                <fullName>90 minutes</fullName>
            </value>
            <value>
                <fullName>2 hours</fullName>
            </value>
            <value>
                <fullName>1/2 day</fullName>
            </value>
            <value>
                <fullName>Full day</fullName>
            </value>
            <value>
                <fullName>Varies</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>