force-app/main/default/objects/Pro_Services_Topic__c/fields/PS_TopicWhoShouldAttend__c.field-meta.xml
<CustomField>
    <fullName>PS_TopicWhoShouldAttend__c</fullName>
    <description>Who should attend this topic?</description>
    <label>Who Should Attend</label>
    <type>TextArea</type>
</CustomField>