force-app/main/default/objects/Pro_Services_Topic__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>What is the current status of this topic?</description>
    <inlineHelpText>This field indicates the current status of this Topic. In development = Future offering but not yet developed; Active = Available Topic; Archived = Available only upon request (may be outdated or no longer relevant); Removed = Not available.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>