force-app/main/default/objects/Pro_Services_Topic__c/fields/Sub_Status_del__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status_del__c</fullName>
    <description>What is the current sub status of this topic?</description>
    <inlineHelpText>The Sub-Status is dependent upon the value of the Status field and provides more information about the current status of this Topic.</inlineHelpText>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Priority</fullName>
            </value>
            <value>
                <fullName>Standard Priority</fullName>
            </value>
            <value>
                <fullName>Low Priority</fullName>
            </value>
            <value>
                <fullName>Initial Version</fullName>
            </value>
            <value>
                <fullName>Revised/Updated</fullName>
            </value>
            <value>
                <fullName>Limited Interest</fullName>
            </value>
            <value>
                <fullName>Few Requests</fullName>
            </value>
            <value>
                <fullName>Outdated</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Create On Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>