force-app/main/default/objects/Pro_Services_Topic__c/listViews/AllTopics.listView-meta.xml
<ListView>
    <fullName>AllTopics</fullName>
    <columns>NAME</columns>
    <columns>PS_TopicSubTitle__c</columns>
    <columns>PS_TopicCategory__c</columns>
    <columns>PS_TopicSynopsis_del__c</columns>
    <columns>PS_TopicLevel__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Topics</label>
</ListView>