force-app/main/default/objects/Pro_Services_Topic__c/listViews/Articlesactivearchived.listView-meta.xml
<ListView>
    <fullName>Articlesactivearchived</fullName>
    <columns>NAME</columns>
    <columns>PS_TopicSynopsis_del__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status_del__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_TopicAvailableDeliveryFormat__c</field>
        <operation>includes</operation>
        <value>Article</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Archived</value>
    </filters>
    <label>Articles (active &amp; archived)</label>
</ListView>