force-app/main/default/objects/Pro_Services_Topic__c/listViews/ASA_Brand.listView-meta.xml
<ListView>
    <fullName>ASA_Brand</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Brand_del__c</columns>
    <columns>PS_TopicCategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_del__c</field>
        <operation>equals</operation>
        <value>ASA</value>
    </filters>
    <label>ASA Brand</label>
</ListView>