force-app/main/default/objects/Pro_Services_Topic__c/listViews/Both_Brand.listView-meta.xml
<ListView>
    <fullName>Both_Brand</fullName>
    <columns>NAME</columns>
    <columns>Brand_del__c</columns>
    <columns>PS_TopicCategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_del__c</field>
        <operation>equals</operation>
        <value>Both</value>
    </filters>
    <label>Both Brand</label>
</ListView>