force-app/main/default/objects/Pro_Services_Topic__c/listViews/ConfPresentationsactiveonly.listView-meta.xml
<ListView>
    <fullName>ConfPresentationsactiveonly</fullName>
    <columns>NAME</columns>
    <columns>PS_TopicCategory__c</columns>
    <columns>PS_TopicSynopsis_del__c</columns>
    <columns>PS_TopicAvailablePresenters__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status_del__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_ConferenceOffering__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Active</value>
    </filters>
    <label>Conf. Presentations (active only)</label>
</ListView>