force-app/main/default/objects/Pro_Services_Topic__c/listViews/Financial_Literacy_for_Students.listView-meta.xml
<ListView>
    <fullName>Financial_Literacy_for_Students</fullName>
    <columns>NAME</columns>
    <columns>PS_TopicDescription__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_TopicCategory__c</field>
        <operation>equals</operation>
        <value>Financial Literacy for Students</value>
    </filters>
    <filters>
        <field>PS_TopicAvailableDeliveryFormat__c</field>
        <operation>notEqual</operation>
        <value>Article</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Topics - Financial Literacy for Students</label>
</ListView>