force-app/main/default/objects/Pro_Services_Topic__c/listViews/ProfessionalServices.listView-meta.xml
<ListView>
    <fullName>ProfessionalServices</fullName>
    <filterScope>Queue</filterScope>
    <label>Professional Services</label>
    <queue>ProfessionalServices</queue>
</ListView>