force-app/main/default/objects/Pro_Services_Topic__c/listViews/ProfessionalServicesManagement.listView-meta.xml
<ListView>
    <fullName>ProfessionalServicesManagement</fullName>
    <filterScope>Queue</filterScope>
    <label>Professional Services Management</label>
    <queue>ProfessionalServicesManagement</queue>
</ListView>