force-app/main/default/objects/Pro_Services_Topic__c/listViews/Topic_List_All_active.listView-meta.xml
<ListView>
    <fullName>Topic_List_All_active</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PS_TopicCategory__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Archived,Removed</value>
    </filters>
    <label>Topic List - All active</label>
</ListView>