force-app/main/default/objects/Pro_Services_Topic__c/listViews/Topics_Campus_Leadership_Series.listView-meta.xml
<ListView>
    <fullName>Topics_Campus_Leadership_Series</fullName>
    <columns>NAME</columns>
    <columns>PS_TopicDescription__c</columns>
    <columns>Status__c</columns>
    <columns>PS_TopicAvailablePresenters__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_TopicCategory__c</field>
        <operation>includes</operation>
        <value>Campus Leadership Series</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Topics - Campus Leadership Series-active</label>
</ListView>